<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <!-- Vertical LinearLayout (Parent) below-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/drinker_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/Name_hint"
            android:inputType="textCapWords" />


        <!-- Toppings TextView below-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <!-- Check Box for whipped cream below-->
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Whipped_cream"
            android:textSize="16sp" />

        <!-- Check Box for chocolate below-->
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/Chocolate"
            android:textSize="16sp" />


        <!-- Quantity TextView below-->
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"/>

        <!-- Horizontal LinearLayout (Child from Line 4) for - and + below-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <!--&lt;!&ndash; Order sumamry TextView Below&ndash;&gt;-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="order summary"-->
            <!--android:textAllCaps="true" />-->

        <!--&lt;!&ndash; Value of Order Summary TextView Below&ndash;&gt;-->
        <!--<TextView-->
            <!--android:id="@+id/order_summary_text_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="0"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="16sp" />-->

        <!-- ORDER button below-->
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>